fixed reputation overlay z-index

--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -367,6 +367,7 @@ img.profile-pic:before {
 	padding: 0px 3px;
 	position: absolute;
 	bottom: -16px;
+	z-index: 1;
 }
 .user-card-compact {
 	min-height: 48px;
